# Php_analyzer

./: .replit  README.md  logs.txt  main.py  prueba.txt  prueba2.txt  pyproject.toml  script-farra.txt  script-franco.txt  script-keylafranco.txt  script-zaruma.txt  ventana.py
analyzers/: lexPHP.py  lexSeman.py  lexico.py  parser.out  parsetab.py  sintactico.py  sintactico2.py
